--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/gft_receitas?createDatabaseIfNotExist=True
 spring.datasource.username=root
-spring.datasource.password=rootroot1234
+spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
-#spring.sql.init.mode=always
